# rc_description

./: CMakeLists.txt  README.md  package.xml
config/: check_joint_rviz.rviz
launch/: check_joint.launch  test_urdf.launch
meshes/common/: action.stl  radar.stl  swerve1_pivot.stl  swerve1_wheel.stl  swerve2_pivot.stl  swerve2_wheel.stl
meshes/elephant/: base_link.stl
meshes/rabbit/: Ban.stl  Chilun.stl  DaFuYang.stl  FuYang.stl  Shoot-1.stl  Shoot-2.stl  Shooter-1.stl  Shooter-2.stl  Shooter-Base.stl  Transform.stl  base.stl  base_link.stl  chilun.stl  gan1.stl  gan2.stl  left_motor.stl  left_plank.stl  left_tude_1.stl  left_tude_2.stl  lun.stl  lun_1.stl  motor.stl  pull_1.stl  pull_motor.stl  right_plank.stl  roller_2.stl  roller_3.stl  roller_4.stl  shooterí¬base.stl  transport.stl
urdf/common/: action.urdf.xacro  imu.urdf.xacro  inertia_utils.urdf.xacro  mecanum_wheel.urdf.xacro  omni_wheel.urdf.xacro  radar.urdf.xacro  swerve1_drive.urdf.xacro  swerve2_drive.urdf.xacro  swerve_drive.urdf.xacro
urdf/elephant/: chassis.urdf.xacro  elephant.urdf.xacro
urdf/engineer/: arm.urdf.xacro  chassis.urdf.xacro  engineer.urdf.xacro
urdf/rabbit/: chassis.urdf.xacro  collect.transmission.urdf.xacro  collect.urdf.xacro  rabbit.urdf.xacro  shooter.transmission.urdf.xacro  shooter.urdf.xacro  shooter_collection.transmission.urdf.xacro  shooter_collection.urdf.xacro
urdf/standard/: chassis.urdf.xacro  gimbal.urdf.xacro  shooter.urdf.xacro  standard.urdf.xacro
urdf/test/: chassis.urdf.xacro  test.urdf.xacro
